--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Ehsan Allahi | Personal portfolio website</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Ehsan Allahi | Software Engineering Fellow @ Headstarter" name="keywords">
-        <meta content="nnovative and detail-oriented Website Developer with a fellowship at Headstarter AI, bringing 2 years of experience in designing, developing, and maintaining responsive and user-friendly websites. Proficient in front-end and back-end technologies, including HTML5, CSS3, JavaScript (ES6+), React.js, and Next.js. Demonstrates strong collaboration skills with cross-functional teams to deliver innovative digital solutions. Adept at integrating third-party APIs and services, ensuring high performance, security, and scalability. Committed to staying current with industry trends and technologies to continually enhance user engagement and experience." name="description">
+        <meta content="Innovative and detail-oriented Website Developer with a fellowship at Headstarter AI, bringing 2 years of experience in designing, developing, and maintaining responsive and user-friendly websites. Proficient in front-end and back-end technologies, including HTML5, CSS3, JavaScript (ES6+), React.js, and Next.js. Demonstrates strong collaboration skills with cross-functional teams to deliver innovative digital solutions. Adept at integrating third-party APIs and services, ensuring high performance, security, and scalability. Committed to staying current with industry trends and technologies to continually enhance user engagement and experience." name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.png" rel="icon">
